# lena_v02

./: CMakeLists.txt  CMakeSettings.json
enc_temp_folder/9ad9c49eb2625a9ac31f2a626c8c822/: _24bit_pixel.h
lena_v02/: CMakeLists.txt  _24bit_pixel.cpp  _24bit_pixel.h  _8bit_pixel.cpp  _8bit_pixel.h  file_exception.cpp  file_exception.h  lena_v02.cpp  lena_v02.h  obraz.cpp  obraz.h  pbm.cpp  pbm.h  pgm.cpp  pgm.h  pixel_24bit.cpp  pixel_24bit.h  pixel_8bit.cpp  pixel_8bit.h  ppm.cpp  ppm.h
